[Add] docker configure

--- a/django_project/.env
+++ b/django_project/.env
@@ -1,4 +1,4 @@
 SECRET_KEY=foo
 DEBUG=True
-DATABASE_URI=postgresql://postgres:postgres@postgres:5432/demo3
-RABBITMQ_URI=amqps://moeuxdkz:w3rk9qZsz7ZTJ-VEJAX0LIFW8Z9M0szN@armadillo.rmq.cloudamqp.com/moeuxdkz
+DATABASE_URI=postgresql://postgres:postgres@postgres_db:5432/demo3
+RABBITMQ_URI=amqp://moeuxdkz:w3rk9qZsz7ZTJ@rabbitmq:5672/moeuxdkz
